tests/fail/fail_int_literal_out_of_range.kr
fn inisiu() {
    nter x = 99999999999999999999999;
    mostran(x);
}
